--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@kushki/js": "^1.21.0",
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -18,6 +17,7 @@
     "express-session": "^1.17.2",
     "mongodb": "^3.6.10",
     "next": "11.0.1",
+    "next-connect": "^0.10.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "stripe": "^8.171.0",
