--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@stripe/stripe-js": "^1.17.1",
     "express-session": "^1.17.2",
     "mongodb": "^3.6.10",
-    "next": "11.0.1",
+    "next": "^11.1.2",
     "next-connect": "^0.10.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-material-ui-carousel": "^2.3.5",
     "stripe": "^8.171.0",
     "swr": "^0.5.6"
   },
