--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "lint": "next lint",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
@@ -20,7 +21,7 @@
     "@stripe/stripe-js": "^1.17.1",
     "express-session": "^1.17.2",
     "mongodb": "^3.6.10",
-    "next": "^11.1.2",
+    "next": "^12.0.1",
     "next-connect": "^0.10.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
