--- a/package.json
+++ b/package.json
@@ -19,15 +19,21 @@
     "@sendgrid/mail": "^7.4.5",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.17.1",
+    "bcryptjs": "^2.4.3",
+    "connect-redis": "^6.0.0",
     "express-session": "^1.17.2",
     "mongodb": "^3.6.10",
     "next": "^12.0.1",
     "next-connect": "^0.10.2",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-material-ui-carousel": "^2.3.5",
+    "redis": "^3.1.2",
     "stripe": "^8.171.0",
-    "swr": "^0.5.6"
+    "swr": "^0.5.6",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "typescript": "^4.4.2"
