--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.17.1",
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^4.6.0",
     "connect-redis": "^6.0.0",
     "express-session": "^1.17.2",
-    "mongodb": "^3.6.10",
+    "mongodb": "^4.2.1",
     "next": "^12.0.1",
-    "next-connect": "^0.10.2",
+    "next-connect": "^0.11.0",
+    "next-session": "^4.0.4",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "react": "17.0.2",
@@ -32,7 +34,7 @@
     "react-material-ui-carousel": "^2.3.5",
     "redis": "^3.1.2",
     "stripe": "^8.171.0",
-    "swr": "^0.5.6",
+    "swr": "^1.1.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
